Solidify not working in Blender 2.8 #61979

Closed
opened 2019-02-26 15:22:29 +01:00 by Yolao Heinz · 13 comments

System Information
Operating system:
Graphics card:

Windows 7
GeForce GTX 650Ti

Blender Version

version: 2.80 (sub 45), branch: blender2.7, commit date: 2019-02-21 23:40, hash: 9541ce2c26, type: Release
build date: 21/02/2019

Short description of error

When using Solidify in Blender 2.8, "High Quality Normals" is not doing anything.

Exact steps for others to reproduce the error

1-With default cube delete the front and bottom faces.
2-Make a Loop Cut about 1/4 and in that quarter face at the side make an extrusion, type 1 to make it unit long.
3-Then apply a "Solidify" modifier and make -0.5m Thick and check "Even Thickness".
4-The mesh now has a bad deformation, check now "High Quality Normals" and you will see that it does not have any effect on the mesh.

**System Information** Operating system: Graphics card: Windows 7 GeForce GTX 650Ti **Blender Version** version: 2.80 (sub 45), branch: blender2.7, commit date: 2019-02-21 23:40, hash: 9541ce2c261b, type: Release build date: 21/02/2019 **Short description of error** When using Solidify in Blender 2.8, "High Quality Normals" is not doing anything. **Exact steps for others to reproduce the error** 1-With default cube delete the front and bottom faces. 2-Make a Loop Cut about 1/4 and in that quarter face at the side make an extrusion, type 1 to make it unit long. 3-Then apply a "Solidify" modifier and make -0.5m Thick and check "Even Thickness". 4-The mesh now has a bad deformation, check now "High Quality Normals" and you will see that it does not have any effect on the mesh.
Author

Added subscriber: @Yolao

Added subscriber: @Yolao
Author

Here is an screen shot of the issue.
Solidify_Problem_in_Blender_2_8.jpg

Here is an screen shot of the issue. ![Solidify_Problem_in_Blender_2_8.jpg](https://archive.blender.org/developer/F6717568/Solidify_Problem_in_Blender_2_8.jpg)

Added subscriber: @ZedDB

Added subscriber: @ZedDB

Can you attach a sample .blend file?

Can you attach a sample .blend file?
Author

Yes, here is the file. Thanks.
Solidify_Issue_Blender2_8.blend

Yes, here is the file. Thanks. [Solidify_Issue_Blender2_8.blend](https://archive.blender.org/developer/F6718289/Solidify_Issue_Blender2_8.blend)
Bastien Montagne was assigned by Sebastian Parborg 2019-02-26 19:13:24 +01:00

I can indeed confirm that this works in 2.79 and that high quality normals doesn't seem to do anything in 2.8.

I can indeed confirm that this works in 2.79 and that high quality normals doesn't seem to do anything in 2.8.
Author

Thanks, im sure you guys are going to solve it. By the way, how am i going to know when its fixed?... do i have just to download the latest 2.8 Beta from time to time?.., or is there any place to see what bugs are being solved out?

Thanks again for all your work and time.

Thanks, i`m sure you guys are going to solve it. By the way, how am i going to know when it`s fixed?... do i have just to download the latest 2.8 Beta from time to time?.., or is there any place to see what bugs are being solved out? Thanks again for all your work and time.
Member

Added subscriber: @LazyDodo

Added subscriber: @LazyDodo
Member

this ticket will be updated and closed when the problem is fixed. once that happens you can grab a build the next day and it should be fixed

this ticket will be updated and closed when the problem is fixed. once that happens you can grab a build the next day and it should be fixed
Author

Great, thanks.

Great, thanks.

This issue was referenced by cae56ad6a2

This issue was referenced by cae56ad6a281fcb81410973d4833f07662bbaaea

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Is working now, thank you very much.

Is working now, thank you very much.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61979
No description provided.